--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 certifi==2021.10.8
 charset-normalizer==2.0.12
+click==8.1.2
+gTTS==2.2.4
 idna==3.3
+playsound==1.3.0
 python-aiml==0.9.3
 requests==2.27.1
+six==1.16.0
 urllib3==1.26.9
